<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="app_name">picSdk</string>
  <string name="notification_number">[<xliff:g>%d</xliff:g>条]</string>
  <string name="number_format"><xliff:g>%.1f</xliff:g>万</string>
  <string name="string_book_study">绘本学习</string>
  <string name="string_book_continue">继续学习</string>
  <string name="string_book_renew">重新开始</string>
  <string name="string_read_book">读绘本</string>
  <string name="string_study_word">学词汇</string>
  <string name="string_look_video">看动画</string>
  <string name="string_listen_music">听音乐</string>
  <string name="string_skip">跳过</string>
  <string name="string_video_stop">已暂停</string>
  <string name="string_book_read_more">查看全部</string>
  <string name="add_text_hint">8个字符以内</string>
  <string name="choose_image">选择图片</string>
  <string name="preview_image">预览图片</string>
  <string name="cancel">取消</string>
  <string name="photo_view_fail">无法查看图片</string>
  <string name="origin_photo">查看原图</string>
  <string name="common_save">保存</string>
  <string name="share_photo">分享</string>
  <string name="download_success">保存成功</string>
  <string name="download_fail">保存失敗</string>
  <string name="retry">重试</string>
  <string name="edit_image">编辑图片</string>
  <string name="folder_all">所有照片</string>
  <string name="preview">预览</string>
  <string name="select">选择</string>
  <string name="msg_no_camera">没有系统相机</string>
  <string name="msg_amount_limit">已经达到最高选择数量</string>
  <string name="send_image">完成</string>
  <string name="cannot_load_image">无法加载图片</string>
  <string name="common_permission_tip">纳米盒需要以上权限\n才可正常使用</string>
  <string name="common_permission_detail_tip">纳米盒需要<xliff:g>%s</xliff:g>权限</string>
  <string name="cant_start">无法启动应用</string>
  <string name="common_sunday">周日</string>
  <string name="common_monday">周一</string>
  <string name="common_tuesday">周二</string>
  <string name="common_wednesday">周三</string>
  <string name="common_thursday">周四</string>
  <string name="common_friday">周五</string>
  <string name="common_saturday">周六</string>
  <string name="common_loading">页面加载中</string>
  <string name="common_net_error">网络异常，请检查网络设置</string>
  <string name="common_net_refresh">轻触屏幕重新加载</string>
  <string name="image_done_num">完成(%1$d/%2$d)</string>
  <string name="image_preview_num">预览(%1$d)</string>
  <string name="image_select">选择图片</string>
  <string name="image_preview">预览图片</string>
  <string name="image_process">正在处理…</string>
  <string name="image_not_edit">无法编辑图片</string>
  <string name="image_upload_progress">第%1$d张/共%2$d张（%3$s/%4$s）</string>
  <string name="image_num">%1$d张</string>
  <string name="common_tip">提示</string>
  <string name="common_confirm">确定</string>
  <string name="common_cancel">取消</string>
  <string name="common_image_edit_paint">涂鸦</string>
  <string name="common_image_edit_clip">裁剪</string>
  <string name="common_image_edit_mask">马赛克</string>
  <string name="common_image_edit_blur">模糊高亮</string>
  <string name="common_image_edit_text">文字</string>
  <string name="common_release_cancel">松开后取消</string>
  <string name="common_press_read">按住朗读</string>
  <string name="common_release_completed">松开完成，上滑取消</string>
  <string name="wk_choose_project">选课</string>
  <string name="wk_speed">倍速%1$s</string>
  <string name="wk_speed_1">倍速1.0x</string>
  <string name="low_volume">音量偏小，请调大音量</string>
  <string name="hfx_sample_text">范例（红框内文字）：</string>
  <string name="hfx_tips_title">绘本配音提示</string>
  <string name="hfx_tips_freeaudio_title">故事秀创作提示</string>
  <string name="hfx_tips_worker">● 你可以在 \"创作专区\"-\"创作中作品\"查看未完成的作品,也可以关注已提交作品的审核进度\n\n● 作品上线后,请在 \"创作专区\"-\"我的专辑\" 中查看\n\n● 你的专辑还可以分享给其他小朋友欣赏哦
  </string>
  <string name="hfx_tips_message">● 请在安静环境下配音\n\n● 发音准确，无读错或漏读\n\n● 请勿插入广告，保持简单干净\n\n● 建议使用耳麦进行配音
  </string>
  <string name="hfx_online_tips_message">● 请确保良好的网络环境\n\n● 请在安静环境下配音\n\n● 发音准确，无读错或漏读\n\n● 请勿插入广告，保持简单干净\n\n● 建议使用耳麦进行配音
  </string>
  <string name="hfx_tips_freeaudio_message">● 请在安静环境下录制\n● 发音准确，无字词错读\n● 请勿插入广告，保持简单干净\n● 录制时长控制在1到30分钟
  </string>
  <string name="hfx_title">故事秀</string>
  <string name="hfx_confirm">确定</string>
  <string name="hfx_commit_title">恭喜你完成了一部作品！</string>
  <string name="hfx_work_introduce">作品介绍</string>
  <string name="hfx_work_introduce_hint">在此输入你对该作品的介绍，10到200字之间</string>
  <string name="hfx_empty_story_introduce">请输入故事简介</string>
  <string name="hfx_limit_story_introduce">故事简介字数太少</string>
  <string name="hfx_empty_video_introduce">请输入视频简介</string>
  <string name="hfx_limit_video_introduce">视频简介字数太少</string>
  <string name="hfx_delete_work">删除</string>
  <string name="hfx_storyshow">一段深情的演绎、一个搞笑的故事、一抹美好的回忆都可以通过故事秀这个栏目分享给大家，赶紧加入吧！！！</string>
  <string name="hfx_videoshow">美丽的世界、快乐的生活、幽默的小视频…透过你的眼睛看到不一样的世界，视频秀栏目期待盒粉们的加入哦！</string>
  <string name="hfx_my_story">我来讲故事</string>
  <string name="hfx_my_video">我来秀视频</string>
  <string name="hfx_retry">重试</string>
  <string name="hfx_read_menu_jump">跳转</string>
  <string name="hfx_read_menu_auto">自动翻页</string>
  <string name="hfx_read_menu_brightness">亮度</string>
  <string name="hfx_comment_title">书看完了，来发表下评论吧~</string>
  <string name="hfx_comment_btn">发表评论</string>
  <string name="hfx_error_resource_prepare_fail">啊哦，加载失败了~</string>
  <string name="hfx_speaker_info">%1$s评 %2$s阅</string>
  <string name="hfx_score_text">%.1f分</string>
  <string name="hfx_comment_text">已有%s人评论</string>
  <string name="hfx_saving">正在保存</string>
  <string name="hfx_error_read">无法打开</string>
  <string name="hfx_continue_read_message">您上次看到了第%d页，是否继续阅读？</string>
  <string name="hfx_continue_read">继续阅读</string>
  <string name="hfx_restart_read">从头开始</string>
  <string name="hfx_jump">跳过</string>
  <string name="hfx_jump_page_number_text">第%1$d页/共%2$d页</string>
  <string name="hfx_res_loading">正在载入资源</string>
  <string name="hfx_image_loading">正在载入图片 [%1$d/%2$d]</string>
  <string name="hfx_audio_loading">正在载入原音 [%1$d/%2$d]</string>
  <string name="hfx_user_audio_loading">正在载入配音[%1$d/%2$d]</string>
  <string name="hfx_local_loading">正在准备本地资源[%1$d/%2$d]</string>
  <string name="hfx_error_listen">没有可试听音频文件</string>
  <string name="hfx_record_retry">重新录音</string>
  <string name="hfx_record_retry_confirm">确认要重新录制本页吗？</string>
  <string name="hfx_record_new">点击录音</string>
  <string name="hfx_record_file_fail">录音文件为空，请检查是否已关闭了本应用的录音权限</string>
  <string name="hfx_record_listen">试听本页</string>
  <string name="hfx_record_delete">删除录音</string>
  <string name="hfx_record_delete_confirm">确认要删除本页录音吗？</string>
  <string name="hfx_record_delete_fail">录音删除失败</string>
  <string name="hfx_record_stop">停止</string>
  <string name="hfx_record_submit">完成\n提交</string>
  <string name="hfx_record_progress">已录%1$d/%2$d页</string>
  <string name="hfx_eval_excellent">表现非常棒，再接再厉哦！</string>
  <string name="hfx_eval_good">读得不错，还可以更好哦！</string>
  <string name="hfx_eval_bad">读的不太好，继续练习吧！</string>
  <string name="hfx_eval_poor">没认真读吧，建议重新读哦！</string>
  <string name="hfx_eval_no_content_hint">本页无朗读内容，仅供阅读</string>
  <string name="hfx_book_type1">中文绘本</string>
  <string name="hfx_book_type2">英文绘本</string>
  <string name="hfx_book_type3">连环画</string>
  <string name="hfx_book_type4">故事秀</string>
  <string name="hfx_book_type5">视频秀</string>
  <string name="hfx_error_network">当前无网络，请检查网络连接！</string>
  <string name="hfx_commit_work">提交作品</string>
  <string name="hfx_commit_network_message">您当前不是在WiFi环境下，将会使用移动网络流量，是否继续？</string>
  <string name="hfx_volume">%d%%</string>
  <string name="hfx_quit_message">要退出吗，是否保存修改？</string>
  <string name="hfx_quit_save">保存</string>
  <string name="hfx_quit_no_save">直接退出</string>
  <string name="hfx_quiting">正在退出</string>
  <string name="hfx_my_work">我的作品</string>
  <string name="hfx_error_book_id">未知书本</string>
  <string name="hfx_loading">正在加载</string>
  <string name="hfx_loading_fail">加载失败，请重试</string>
  <string name="hfx_show_mywork_message">您已制作过这本书了，请到“我的作品”中查看</string>
  <string name="hfx_workers_title">本书已有以下盒粉配音，点击欣赏</string>
  <string name="hfx_workers_btn">我来配音</string>
  <string name="hfx_limit_title">此绘本已有%d人配音，您确认要继续配音吗？</string>
  <string name="hfx_limit_btn">继续配音</string>
  <string name="hfx_limit_quit">退出</string>
  <string name="hfx_default_time">0:00</string>
  <string name="hfx_eval_commit_text">提交作品后可以获得学分奖励，分享后被点赞和评论还有额外学分哦！</string>
  <string name="hfx_guide_play_audio">点击这里可以听原声音频哦。</string>
  <string name="hfx_guide_play_record">点击这里可以听录音哦。</string>
  <string name="hfx_guide_record">点击话筒，开始录音；再点一下，结束录音。</string>
  <string name="hfx_guide_slide_image">图片可以左右滑动切换到上一张或下一张</string>
  <string name="hfx_more_no_book">您还没有绘本哦，赶快选购吧~</string>
  <string name="hfx_more_no_network">糟糕，网络出小差了，刷新试试~</string>
  <string name="hfx_usr_guide">使用指南</string>
  <string name="hfx_play">播放</string>
  <string name="hfx_pause">暂停</string>
  <string name="hfx_completion">完成</string>
  <string name="hfx_tip">提示</string>
  <string name="hfx_exit_tip">直接退出将不保存当前作品,是否退出?</string>
  <string name="hfx_skip">跳过</string>
  <string name="hfx_done">完成</string>
  <string name="hfx_limit_30_minute">您已经录了30分钟,休息一下吧</string>
  <string name="hfx_cancel">取消</string>
  <string name="hfx_re_record">重录将丢失录音数据,确定要重新录制?</string>
  <string name="hfx_limit_1_minute">您的作品时长不足一分钟</string>
  <string name="hfx_frequently">请勿频繁操作</string>
  <string name="hfx_stop">正在播放，是否停止播放继续录制?</string>
  <string name="hfx_limit_10_second">录制不足十秒,建议重新录制</string>
  <string name="hfx_music_None">无背景</string>
  <string name="hfx_music_lyric">抒情</string>
  <string name="hfx_music_rhythm">节奏</string>
  <string name="hfx_music_anthiqu">古风</string>
  <string name="hfx_music_soft">柔和</string>
  <string name="hfx_music_elegant">优雅</string>
  <string name="hfx_music_relieve">舒缓</string>
  <string name="hfx_music_sad">忧伤</string>
  <string name="hfx_music_cheerful">欢快</string>
  <string name="hfx_init_failed">麦克风初始化失败,有其它应用正在录音或录音权限被禁用,请确认无以上问题后重试</string>
  <string name="hfx_recording">正在录音,请停止后再退出</string>
  <string name="hfx_never_tip">不再提示</string>
  <string name="hfx_eval_failed">评测失败</string>
  <string name="hfx_evaluating">正在评测，请稍等</string>
  <string name="hfx_record_short">录音过短，请重新录制</string>
  <string name="hfx_init_failed2">引擎初始化失败，请退出重试！</string>
  <string name="hfx_record_low_voice">录音过小，请重新录制</string>
  <string name="hfx_unit_eval">评</string>
  <string name="hfx_unit_read">阅</string>
  <string name="hfx_continue">继续配音</string>
  <string name="hfx_exit">退出</string>
  <string name="hfx_init">初始化</string>
  <string name="hfx_loading_res_failed">加载资源失败</string>
  <string name="hfx_save_confirm">是否保存修改?</string>
  <string name="hfx_save">保存</string>
  <string name="hfx_know">我知道了</string>
  <string name="hfx_commit">提交</string>
  <string name="hfx_original">听原声</string>
  <string name="hfx_person_album">您已制作过这本书了，请到“我的作品”中查看</string>
  <string name="hfx_re_record_page">确认要重新录制本页吗?</string>
  <string name="hfx_record_init_failed">录音机初始化失败</string>
  <string name="hfx_save_uncomplete">未完成的作品可以保存</string>
  <string name="hfx_cut_limit_10">剪裁后剩余时间不足10秒,建议重新录制</string>
  <string name="hfx_cut_cancel">取消裁剪</string>
  <string name="hfx_cut_confirm">确认裁剪</string>
  <string name="picker_tip">提示</string>
  <string name="picker_exit_tip">退出将会舍弃您对图片的修改，确定退出？</string>
  <string name="picker_confirm">确定</string>
  <string name="picker_cancel">取消</string>
  <string name="picker_give_up">放弃本次编辑?</string>
  <string name="picker_give_up1">放弃</string>
  <string name="picker_keep_change">是否保留修改？</string>
  <string name="picker_input_text">请输入文字</string>
  <string name="picker_text_empty">文本不能为空</string>
  <string name="picker_text_limit">文本长度超过限制</string>
  <string name="picker_text_special">请勿输入特殊字符</string>
  <string name="picker_edit_limit">无法编辑图片</string>
  <string name="player_continue_play">继续播放</string>
  <string name="player_exit">退出</string>
  <string name="player_network_tips">正在使用非WiFi网络，播放将产生流量</string>
  <string name="scan_title">扫码</string>
  <string name="scan_file">相册</string>
  <string name="scan_tips">请将二维码/条形码置于取景框内扫描</string>
</resources>