<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/hfx_read_menu_size"
    android:layout_gravity="bottom"
    android:id="@+id/menu_layout"
    android:background="@color/hfx_gray_background"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/read_menu_catalog"
      android:text="@string/hfx_read_menu_jump"
      style="@style/HfxReadMenuTextStyle"
      android:drawableTop="@drawable/hfx_read_menu_jump_on" />

    <TextView
      android:id="@+id/read_menu_continue"
      android:text="@string/hfx_read_menu_auto"
      style="@style/HfxReadMenuTextStyle"
      android:drawableTop="@drawable/hfx_read_menu_auto_flip_on" />

    <TextView
      android:id="@+id/read_menu_brightness"
      android:text="@string/hfx_read_menu_brightness"
      style="@style/HfxReadMenuTextStyle"
      android:drawableTop="@drawable/hfx_read_menu_brightness_normal" />
  </LinearLayout>
</FrameLayout>