<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:animateLayoutChanges="true">

  <LinearLayout
    android:id="@+id/save_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/actionbar_bg">

    <Button
      android:id="@+id/cancel_btn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textAllCaps="false"
      android:background="?android:selectableItemBackground"
      android:text="@string/common_cancel"
      android:textColor="#fff" />

    <View
      android:layout_width="0.5dp"
      android:layout_height="match_parent"
      android:layout_marginBottom="12dp"
      android:layout_marginTop="12dp"
      android:background="#888" />

    <Button
      android:id="@+id/save_btn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textAllCaps="false"
      android:background="?android:selectableItemBackground"
      android:text="@string/common_save"
      android:textColor="#fff" />
  </LinearLayout>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:text="图片载入中..." />

  <RadioGroup
    android:id="@+id/navigation"
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:layout_alignParentBottom="true"
    android:background="#ddd"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="5dp">

    <RadioButton
      android:id="@+id/rb_paint"
      style="@style/BottomRadioButtonStyle"
      android:drawableTop="@drawable/paint_selector"
      android:text="@string/common_image_edit_paint" />

    <RadioButton
      android:id="@+id/rb_crop"
      style="@style/BottomRadioButtonStyle"
      android:drawableTop="@drawable/crop_selector"
      android:text="@string/common_image_edit_clip" />

    <RadioButton
      android:id="@+id/rb_mosaic"
      style="@style/BottomRadioButtonStyle"
      android:drawableTop="@drawable/frog_selector"
      android:text="@string/common_image_edit_mask" />

    <RadioButton
      android:id="@+id/rb_frog"
      style="@style/BottomRadioButtonStyle"
      android:drawableTop="@drawable/blur_selector"
      android:text="@string/common_image_edit_blur" />
    <RadioButton
      android:id="@+id/rb_text"
      style="@style/BottomRadioButtonStyle"
      android:drawableTop="@drawable/text_selector"
      android:text="@string/common_image_edit_text" />


  </RadioGroup>

  <com.namibox.imageselector.view.PaintImageView
    android:id="@+id/paintview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/navigation"
    android:layout_below="@id/save_bar"
    android:visibility="visible" />

  <com.namibox.imageselector.view.VerticalColorSeekBar
    android:id="@+id/vpb_color"
    android:layout_width="100dp"
    android:layout_height="220dp"
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:layout_marginRight="20dp"
    android:visibility="visible" />

  <ImageView
    android:id="@+id/iv_backout"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_above="@id/vpb_color"
    android:layout_alignParentRight="true"
    android:layout_marginBottom="20dp"
    android:layout_marginRight="25dp"
    android:background="@drawable/video_back_bg"
    android:padding="12dp"
    android:visibility="visible"
    android:scaleType="centerCrop"
    app:srcCompat="@drawable/backout" />

  <com.namibox.imageselector.view.VerticalScrollPaint
    android:id="@+id/size_picker"
    android:layout_width="82dp"
    android:layout_height="220dp"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true"
    android:layout_marginLeft="20dp" />

</RelativeLayout>