<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:fitsSystemWindows="false"
  tools:background="#000"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <me.dm7.barcodescanner.zxing.ZXingScannerView
    android:id="@+id/scanner"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />
  <ImageView
    android:id="@+id/back"
    android:layout_width="44dp"
    android:layout_height="44dp"
    android:padding="12dp"
    android:layout_marginTop="25dp"
    android:scaleType="centerInside"
    android:src="@drawable/scanner_back" />
  <TextView
    android:text="@string/scan_title"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:textColor="#fff"
    android:textSize="16sp"
    android:layout_marginTop="25dp"
    android:layout_width="wrap_content"
    android:layout_height="44dp" />

  <TextView
    android:id="@+id/tvAlbum"
    android:text="@string/scan_file"
    android:layout_alignParentRight="true"
    android:gravity="center"
    android:textColor="#fff"
    android:textSize="16sp"
    android:layout_marginRight="24dp"
    android:layout_marginTop="25dp"
    android:layout_width="wrap_content"
    android:layout_height="44dp"/>

  <TextView
    android:text="@string/scan_tips"
    android:layout_centerHorizontal="true"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="48dp"
    android:textColor="#fff"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
</RelativeLayout>