<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@color/hfx_gray_bg">

  <com.namibox.hfx.view.SectionProgressBar
    android:id="@+id/section_progress"
    android:layout_width="match_parent"
    android:layout_height="@dimen/hfx_section_progress_size" />

  <RelativeLayout
    android:id="@+id/control_layout"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/section_progress">

    <RelativeLayout
      android:layout_centerVertical="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
      <com.namibox.hfx.view.RoundProgressBar
        android:id="@+id/round_progress"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/hfx_round_progress_size"
        android:layout_height="@dimen/hfx_round_progress_size" />

      <TextView
        android:id="@+id/progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:textSize="11sp"
        android:layout_below="@+id/round_progress" />
    </RelativeLayout>

    <TextView
      android:id="@+id/record_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:padding="6dp"
      android:drawablePadding="8dp"
      android:drawableTop="@drawable/hfx_ic_record"
      android:textSize="12sp"
      android:textColor="@color/hfx_white"
      android:text="@string/hfx_record_new"
      android:gravity="center_horizontal" />
    <TextView
      android:id="@+id/listen_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toLeftOf="@+id/record_btn"
      android:layout_toStartOf="@+id/record_btn"
      android:padding="6dp"
      android:drawablePadding="8dp"
      android:drawableTop="@drawable/hfx_ic_listen"
      android:textSize="12sp"
      android:textColor="@color/hfx_white"
      android:text="@string/hfx_record_listen"
      android:gravity="center_horizontal" />
    <TextView
      android:id="@+id/delete_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toRightOf="@+id/record_btn"
      android:layout_toEndOf="@+id/record_btn"
      android:padding="6dp"
      android:drawablePadding="8dp"
      android:drawableTop="@drawable/hfx_ic_delete_record"
      android:textSize="12sp"
      android:textColor="@color/hfx_white"
      android:text="@string/hfx_record_delete"
      android:gravity="center_horizontal" />
    <TextView
      android:id="@+id/submit_btn"
      android:background="@drawable/hfx_btn_done"
      android:text="@string/hfx_record_submit"
      android:textColor="#fff"
      android:textSize="16sp"
      android:padding="8dp"
      android:gravity="center"
      android:layout_centerVertical="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentEnd="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  </RelativeLayout>
</RelativeLayout>