<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#fbf5ed"
  android:orientation="vertical">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">
    <TextView
      android:id="@+id/page_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_centerInParent="true"
      android:text="@string/hfx_book_type4"
      android:textColor="#35a4e6"
      android:textSize="50dp" />

    <ImageView
      android:id="@+id/back_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:src="@drawable/hfx_ic_return" />
  </RelativeLayout>


  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="你讲故事大家听"
    android:textColor="#35a4e6"
    android:textSize="22dp" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_marginBottom="16dp"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <ImageView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:layout_gravity="center"
      android:padding="16dp"
      android:src="@drawable/hfx_img_tu" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_gravity="center_horizontal"
      android:paddingLeft="60dp"
      android:paddingRight="60dp"
      android:lineSpacingExtra="2dp"
      android:text="@string/hfx_storyshow"
      android:textColor="#f29540"
      android:textSize="16sp" />
  </LinearLayout>

  <ImageView
    android:id="@+id/tab_item_tips2"
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:layout_marginBottom="8dp"
    android:layout_gravity="center_horizontal"
    android:contentDescription="@null"
    android:src="@drawable/hfx_ic_luyin" />

  <TextView
    android:id="@+id/tab_item_text2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:text="@string/hfx_my_story"
    android:textColor="#35a4e6"
    android:textSize="18sp" />


</LinearLayout>