<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_gravity="bottom">
    <View
      android:id="@+id/diliver"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_alignParentTop="true"
      android:background="#eee"/>
    <ImageView
      android:id="@+id/bgImg"
      android:layout_width="match_parent"
      android:layout_height="130dp"
      android:layout_below="@+id/diliver"
      android:scaleType="fitEnd"/>
  </RelativeLayout>

  <LinearLayout
    android:id="@+id/menu_layout"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_gravity="bottom"
    android:background="@drawable/hfx_menu_bottom"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/read_menu_catalog"
      style="@style/HfxReadMenuTextStyle"
      android:drawableTop="@drawable/hfx_read_menu_jump_on"
      android:text="@string/hfx_read_menu_jump"
      android:visibility="gone"/>
    <TextView
      android:id="@+id/read_menu_continue"
      style="@style/HfxReadMenuTextStyle"
      android:drawableTop="@drawable/hfx_read_menu_auto_flip_on"
      android:text="@string/hfx_read_menu_auto"
      android:visibility="gone"/>
    <TextView
      android:id="@+id/read_menu_brightness"
      style="@style/HfxReadMenuTextStyle"
      android:drawableTop="@drawable/hfx_read_menu_brightness_normal"
      android:text="@string/hfx_read_menu_brightness"
      android:visibility="gone"/>
    <RelativeLayout
      android:id="@+id/audio_play_layout"
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:layout_weight="1"
      android:layout_gravity="center"
      >

      <ImageView
        android:id="@+id/iv_audio_play"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@+id/audio_play"
        android:layout_centerHorizontal="true"
        android:contentDescription="@null"
        android:src="@drawable/hfx_eval_show_play_audio_selector_work"
        />
      <TextView
        android:id="@+id/audio_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/hfx_play"
        android:textColor="#ffffff"
        android:textSize="11sp"
        />
    </RelativeLayout>

    <RelativeLayout
      android:id="@+id/brightness_layout"
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:layout_weight="1"
      android:layout_gravity="center">
      <ImageView
        android:id="@+id/iv_brightness"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@+id/brightness_icon"
        android:layout_centerHorizontal="true"
        android:contentDescription="@null"
        android:src="@drawable/hfx_eval_show_play_selector"
        />
      <TextView
        android:id="@+id/brightness_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/hfx_read_menu_jump"
        android:textColor="#ffffff"
        android:textSize="11sp"
        />
    </RelativeLayout>

    <RelativeLayout
      android:id="@+id/auto_play_layout"
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:layout_weight="1"
      android:layout_gravity="center"
      >
      <ImageView
        android:id="@+id/iv_auto_play"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@+id/auto_play"
        android:layout_centerHorizontal="true"
        android:src="@drawable/hfx_eval_show_play_auto_selector_work"
        />
      <TextView
        android:id="@+id/auto_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/hfx_read_menu_auto"
        android:textColor="#ffffff"
        android:textSize="11sp"
        />
    </RelativeLayout>

  </LinearLayout>

</FrameLayout>