<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#00000000">

  <ImageView
    android:id="@+id/thumb"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    android:src="#00000000" />

  <ImageView
    android:id="@+id/start_play"
    android:layout_width="@dimen/play_btn_size"
    android:layout_height="@dimen/play_btn_size"
    android:layout_gravity="center"
    android:background="@drawable/player_shape_play_bg"
    android:padding="@dimen/dkplayer_default_spacing"
    android:src="@drawable/player_selector_play_button" />

  <ProgressBar
    android:id="@+id/loading"
    android:layout_width="@dimen/play_btn_size"
    android:layout_height="@dimen/play_btn_size"
    android:layout_gravity="center"
    android:indeterminateDrawable="@drawable/player_progress_loading"
    android:indeterminateDuration="2000"
    android:visibility="gone"
    tools:visibility="visible" />

  <RelativeLayout
    android:id="@+id/net_warning_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:visibility="gone"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tv_video_info"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="25dp"
      android:gravity="center_horizontal"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/status_btn"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:background="@drawable/player_video_continue_play"
        android:gravity="center"
        android:paddingLeft="3dp"
        android:paddingTop="5dp"
        android:paddingRight="3dp"
        android:paddingBottom="5dp"
        android:text="@string/player_continue_play"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

      <TextView
        android:id="@+id/tv_exit_play"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:background="@drawable/player_video_continue_play"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/player_exit"
        android:textColor="@android:color/white"
        android:textSize="14sp" />
    </LinearLayout>

    <TextView
      android:id="@+id/tv_video_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:textColor="#cccccc"
      android:textSize="13sp" />

    <TextView
      android:id="@+id/message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@+id/tv_video_info"
      android:layout_centerHorizontal="true"
      android:text="@string/player_network_tips"
      android:textColor="#cccccc"
      android:textSize="15sp" />

    <TextView
      android:id="@+id/message2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/message"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="5dp"
      android:textColor="#cccccc"
      android:textSize="15sp" />
  </RelativeLayout>

</FrameLayout>